# storage/api-docs/api-docs.json
@@ -1,10 +1,10 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "My Rest API",
-        "description": "Laravel project to practice developing Rest API with L5 Swagger OpenAPI",
+        "title": "My Rest Api",
+        "description": "Laravel project to practicedeveloping Rest API with LS Swagger OpenApi",
         "contact": {
-            "name": "Kevin",
+            "name": "Kevin Divra David Sebasti Nababan",
             "email": "kevindivra2420@gmail.com"
         },
         "version": "1.0",
@@ -16,7 +16,7 @@
         "/api/user/register": {
             "post": {
                 "tags": [
-                    "User"
+                    "user"
                 ],
                 "summary": "Register new user & get token",
                 "operationId": "register",
@@ -25,14 +25,12 @@
                     "required": true,
                     "content": {
                         "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/User"
-                            },
+                            "schema": {},
                             "example": {
-                                "name": "yusup",
-                                "email": "yusup@gmail.com",
-                                "password": "yusup123",
-                                "password_confirmation": "yusup123"
+                                "name": "kevin",
+                                "email": "kevin123@gmail.com",
+                                "password": "kevin123",
+                                "password_confirmation": "kevin123"
                             }
                         }
                     }
@@ -60,7 +58,7 @@
         "/api/user/login": {
             "post": {
                 "tags": [
-                    "User"
+                    "user"
                 ],
                 "summary": "Log in to existing user & get token",
                 "operationId": "login",
@@ -69,12 +67,10 @@
                     "required": true,
                     "content": {
                         "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/User"
-                            },
+                            "schema": {},
                             "example": {
-                                "email": "yusup@gmail.com",
-                                "password": "yusup123"
+                                "email": "kevin123@gmail.com",
+                                "password": "kevin123"
                             }
                         }
                     }
@@ -88,7 +84,7 @@
                             }
                         }
                     },
-                    "201": {
+                    "200": {
                         "description": "Successful",
                         "content": {
                             "application/json": {
@@ -102,7 +98,7 @@
         "/api/user/logout": {
             "post": {
                 "tags": [
-                    "User"
+                    "user"
                 ],
                 "summary": "Log out & destroy self token",
                 "operationId": "logout",
@@ -143,13 +139,65 @@
                 ]
             }
         },
-        "/api/book": {
+        "/api/sport": {
             "get": {
                 "tags": [
-                    "Book"
+                    "Sport"
                 ],
                 "summary": "Display a listing of the items",
                 "operationId": "index",
+                "parameters": [
+                    {
+                        "name": "_page",
+                        "in": "query",
+                        "description": "current page",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64",
+                            "example": 1
+                        }
+                    },
+                    {
+                        "name": "_limit",
+                        "in": "query",
+                        "description": "max item in a page",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64",
+                            "example": 10
+                        }
+                    },
+                    {
+                        "name": "_search",
+                        "in": "query",
+                        "description": "word to search",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "_category",
+                        "in": "query",
+                        "description": "search by category like name",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "_sort_by",
+                        "in": "query",
+                        "description": "word to search",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "example": "latest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "successful",
@@ -163,7 +211,7 @@
             },
             "post": {
                 "tags": [
-                    "Book"
+                    "Sport"
                 ],
                 "summary": "Store a newly created item",
                 "operationId": "store",
@@ -173,12 +221,12 @@
                     "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/components/schemas/Book"
+                                "$ref": "#/components/schemas/Sport"
                             },
                             "example": {
                                 "title": "Eating Clean",
-                                "author": "Inge Tumiwa-Bachrens",
-                                "publisher": "Kawan Pustaka",
+                                "brand": "Inge Tumiwa-Bachrens",
+                                "category": "Kawan Pustaka",
                                 "publication_year": "2016",
                                 "cover": "https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1482170055i/33511107.jpg",
                                 "description": "Menjadi sehat adalah impian semua orang. Makanan yang selama ini kita pikir sehat ternyata belum tentu 'sehat' bagi tubuh kita.",
@@ -213,10 +261,10 @@
                 ]
             }
         },
-        "/api/book/{id}": {
+        "/api/sport/{id}": {
             "get": {
                 "tags": [
-                    "Book"
+                    "Sport"
                 ],
                 "summary": "Display the specified item",
                 "operationId": "show",
@@ -261,7 +309,7 @@
             },
             "put": {
                 "tags": [
-                    "Book"
+                    "Sport"
                 ],
                 "summary": "Update the specified item",
                 "operationId": "update",
@@ -283,12 +331,12 @@
                     "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/components/schemas/Book"
+                                "$ref": "#/components/schemas/Sport"
                             },
                             "example": {
                                 "title": "Eating Clean",
-                                "author": "Inge Tumiwa-Bachrens",
-                                "publisher": "Kawan Pustaka",
+                                "brand": "Inge Tumiwa-Bachrens",
+                                "category": "Kawan Pustaka",
                                 "publication_year": "2016",
                                 "cover": "https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1482170055i/33511107.jpg",
                                 "description": "Menjadi sehat adalah impian semua orang. Makanan yang selama ini kita pikir sehat ternyata belum tentu 'sehat' bagi tubuh kita.",
@@ -332,7 +380,7 @@
             },
             "delete": {
                 "tags": [
-                    "Book"
+                    "Sport"
                 ],
                 "summary": "Remove the specified item",
                 "operationId": "destroy",
@@ -385,15 +433,15 @@
     },
     "components": {
         "schemas": {
-            "Book": {
-                "title": "Book model",
-                "description": "Book model",
+            "Sport": {
+                "title": "Sport model",
+                "description": "Sport model",
                 "required": [
                     "title",
-                    "author"
+                    "brand"
                 ],
                 "xml": {
-                    "name": "Book"
+                    "name": "Sport"
                 }
             },
             "User": {
